# AppOpener

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  release.py  setup.py
.github/workflows/: python-publish.yml
AppOpener/: README.md  __init__.py  check.py  commands.py  features.py  old_style.py  update_list.py
AppOpener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Examples/: CLI-AUTOCOMPLETE.py  CLI-CLOSE.py  CLI-OPEN.py  CLI.py  Pyqt.py  Throw_Error.py  Tkinter.py
docs/: About.md  Applications.md  Build.md  Contribution.md  Examples.md  Mechanism.md  Overview.md  extra.css  index.md  license.md  release-notes.md  requirements.txt
src/app_opener/: __init__.py  __main__.py  commands.py  update_list.py
src/app_opener2/: __main__.py  __main__.py.bak  run_app.py
src/app_opener2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
